Fixed z-index for modals

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -135,8 +135,8 @@ a {
   font-weight: 800 !important;
 }
 
-.fade {
-  z-index: 100000 !important;
+.MuiDrawer-paperAnchorLeft {
+  z-index: 0 !important;
 }
 
 @media (min-width: 600px) {
